# gaussian_parallel_solver

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  gaus.h  main.cpp  mpi.cpp
